--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DailyDeliver</string>
+    <string name="app_name">모두의마켓</string>
 
     <string name="channel_name">My Notification Channel</string>
     <string name="channel_description">Description of My Notification Channel</string>
